Seeting X-Opaque-ID header for all reads and writes for mapreduce and spark (#1770)
This commit adds a X-Opaque-ID header when communicating with Elasticsearch from es-hadoop or es-spark.